[gd_scene load_steps=2 format=1]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]

[node name="menu" type="CenterContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
use_top_left = false
script/script = ExtResource( 1 )
grid_ = NodePath("panel/parts/grid")

[node name="panel" type="PanelContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 305.0
margin/top = 205.0
margin/right = 719.0
margin/bottom = 395.0

[node name="parts" type="VBoxContainer" parent="panel"]

rect/min_size = Vector2( 400, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 407.0
margin/bottom = 183.0
alignment = 1

[node name="grid" type="GridContainer" parent="panel/parts"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 128.0
columns = 2

[node name="type_label" type="Label" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 20.0
text = "Type:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="type" type="OptionButton" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 204.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 20.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Client"
flat = false
align = 0
selected = 0
items = [ "Client", null, false, 0, null, "Server", null, false, 1, null, "Both", null, false, 2, null ]

[node name="host_label" type="Label" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 200.0
margin/bottom = 48.0
text = "Host:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="host" type="LineEdit" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 204.0
margin/top = 24.0
margin/right = 400.0
margin/bottom = 48.0
text = "127.0.0.1"
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="max_players_label" type="Label" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 52.0
margin/right = 200.0
margin/bottom = 76.0
text = "Max players:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="max_players" type="LineEdit" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 204.0
margin/top = 52.0
margin/right = 400.0
margin/bottom = 76.0
text = "32"
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="port_label" type="Label" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 200.0
margin/bottom = 104.0
text = "Port:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="port" type="LineEdit" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 204.0
margin/top = 80.0
margin/right = 400.0
margin/bottom = 104.0
text = "71753"
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="level_label" type="Label" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 108.0
margin/right = 200.0
margin/bottom = 128.0
text = "Level:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="level" type="OptionButton" parent="panel/parts/grid"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 204.0
margin/top = 108.0
margin/right = 400.0
margin/bottom = 128.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="start" type="Button" parent="panel/parts"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 179.0
margin/top = 132.0
margin/right = 220.0
margin/bottom = 152.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="start_duplicate" type="Button" parent="panel/parts"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 95.0
margin/top = 156.0
margin/right = 304.0
margin/bottom = 176.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start and open another window"
flat = false

[connection signal="pressed" from="panel/parts/start" to="." method="start"]

[connection signal="pressed" from="panel/parts/start_duplicate" to="." method="start_and_duplicate"]


